# nira-interview-2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
pipeline/: __init__.py  config.py  deploy.py  run.py
pipeline/domains/: __init__.py
pipeline/domains/finance/: __init__.py  accounts.py  budgets.py  consolidation.py  ingest.py  journal.py  models.py  reporting.py  tax.py  transform.py
pipeline/domains/hr/: __init__.py  attrition.py  compensation.py  compliance.py  headcount.py  ingest.py  models.py  org_structure.py  recruiting.py  transform.py
pipeline/domains/inventory/: __init__.py  ingest.py  models.py  reorder.py  shrinkage.py  stock_levels.py  transform.py  turnover.py  valuation.py  warehouse.py
pipeline/domains/logistics/: __init__.py  carriers.py  costs.py  customs.py  delivery.py  ingest.py  models.py  routing.py  tracking.py  transform.py
pipeline/domains/manufacturing/: __init__.py  bom.py  downtime.py  efficiency.py  ingest.py  models.py  production.py  scheduling.py  transform.py  yield_analysis.py
pipeline/domains/marketing/: __init__.py  attribution.py  campaigns.py  channels.py  funnel.py  ingest.py  models.py  roi.py  segments.py  transform.py
pipeline/domains/procurement/: __init__.py  approvals.py  contracts.py  ingest.py  models.py  purchase_orders.py  savings.py  spend.py  transform.py  vendors.py
pipeline/domains/quality/: __init__.py  ncr.py  (+8 more)
pipeline/utils/: __init__.py  io.py  transforms.py  types.py  validators.py
pipeline/validation/: __init__.py  context.py  expectations.py  reporters.py  suites.py
(+20 files in other folders)
