[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "Internal data pipeline for ETL and reporting"
authors = ["Data Team <data-team@company.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "1.3.5"
pandera = "0.17.2"
pydantic = "^1.10.8"
boto3 = "^1.29.5"
requests = "^2.32.4"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
click = "^8.0.3"
pyyaml = "^6.0.1"
rich = "^13.7.0"
sqlalchemy = "^2.0.0"
great-expectations = "0.16.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^25.1.0"
flake8 = "^5.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core==2.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

